# stt-tts

./: .gitignore  BACKEND_INTEGRATION_GUIDE.md  GCP_GPU_GUIDE.md  INSTALL_FFMPEG.md  PROJECT_CONTEXT.md  TRAINING_REPORT.md  extract_stt_data.bat  pyproject.toml  setup_data_collection.bat
.claude/: settings.local.json
docs/: README.md
infra/docker/: docker-compose.dev.yml
ml-service/evaluation/: __init__.py  stt_eval.py  tts_eval.py
ml-service/evaluation/test_sets/: indic_stt_test.jsonl  indic_tts_test.jsonl
ml-service/stt-service/: requirements.txt
ml-service/stt-service/core/: code_switch_handler.py  punctuation.py  rnnoise_wrapper.py  vad.py
ml-service/training/: requirements.txt
ml-service/training/stt/: train_whisper.py
ml-service/training/stt/configs/: whisper_finetune_indic_v1.yaml
ml-service/training/tts/: train_xtts.py
ml-service/training/tts/configs/: xtts_indic_v1.yaml
ml-service/tts-service/: requirements.txt
ml-service/tts-service/core/: g2p.py  quality_mosnet.py  speaker_encoder.py  text_normalization.py
notebooks/: 01_data_preparation_colab.ipynb  02_tts_xtts_finetuning_colab.ipynb  03_stt_whisper_finetuning_colab.ipynb  04_evaluation_benchmarks_colab.ipynb  kaggle_stt_training.ipynb  kaggle_stt_training_v2.ipynb  kaggle_tts_xtts.ipynb
scripts/: gcp_setup.sh
